--- a/dr-personal-frontend/index.html
+++ b/dr-personal-frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#00ADB5" />
     <meta name="description" content="Sistema de Prescrição Inteligente de Treinos" />
@@ -11,5 +11,6 @@
   <body>
     <noscript>Você precisa habilitar JavaScript para executar esta aplicação.</noscript>
     <div id="root"></div>
+    <script type="module" src="/src/index.jsx"></script>
   </body>
 </html>
