Add offline modal and demo mode for backend unavailability
Introduces an OfflineModal component and demo mode to handle backend connectivity issues. The app now detects backend status, shows a modal when offline, and allows users to explore the system with mock data. Updates context, reducers, hooks, and services to support connectivity checks and demo data usage. Also improves error handling and UI feedback for offline scenarios.

--- a/dr-personal-frontend/index.html
+++ b/dr-personal-frontend/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#00ADB5" />
     <meta name="description" content="Sistema de Prescrição Inteligente de Treinos" />
-    <title>FitnessPro AI</title>
+    <title>FitnessPro</title>
   </head>
   <body>
     <noscript>Você precisa habilitar JavaScript para executar esta aplicação.</noscript>
